<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.bestaone.himall</groupId>
	<artifactId>hi-mall</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<properties>
		<himall.version>1.0.0-SNAPSHOT</himall.version>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<docker.repostory>registry.tfit.com</docker.repostory>
		<docker.registry.name>hiauth</docker.registry.name>
	</properties>

    <modules>
        <module>hi-mall-common</module>
        <module>hi-mall-core</module>
        <module>hi-mall-entity</module>
        <module>hi-mall-microsvr-api</module>
        <module>hi-mall-starter-swagger2</module>
        <module>hi-mall-starter-monitor</module>
        <module>hi-mall-microsvr-goods</module>
        <module>hi-mall-microsvr-order</module>
        <module>hi-mall-web</module>
    </modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.1.3.RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.bestaone.himall</groupId>
				<artifactId>hi-mall-common</artifactId>
				<version>${himall.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bestaone.himall</groupId>
				<artifactId>hi-mall-core</artifactId>
				<version>${himall.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bestaone.himall</groupId>
				<artifactId>hi-mall-entity</artifactId>
				<version>${himall.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bestaone.himall</groupId>
				<artifactId>hi-mall-microsvr-api</artifactId>
				<version>${himall.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bestaone.himall</groupId>
				<artifactId>hi-mall-starter-swagger2</artifactId>
				<version>${himall.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bestaone.himall</groupId>
				<artifactId>hi-mall-starter-monitor</artifactId>
				<version>${himall.version}</version>
			</dependency>

			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>2.9.2</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>2.9.2</version>
			</dependency>

			<dependency>
				<groupId>org.mybatis.spring.boot</groupId>
				<artifactId>mybatis-spring-boot-starter</artifactId>
				<version>2.0.0</version>
			</dependency>
			<dependency>
				<groupId>com.github.pagehelper</groupId>
				<artifactId>pagehelper-spring-boot-starter</artifactId>
				<version>1.2.10</version>
			</dependency>

			<!-- feign ribbon hystrix 依赖 -->
			<dependency>
				<groupId>com.netflix.feign</groupId>
				<artifactId>feign-ribbon</artifactId>
				<version>8.18.0</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.feign</groupId>
				<artifactId>feign-hystrix</artifactId>
				<version>8.18.0</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.feign</groupId>
				<artifactId>feign-core</artifactId>
				<version>8.18.0</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.netflix.feign</groupId>
				<artifactId>feign-jackson</artifactId>
				<version>8.18.0</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.netflix.archaius</groupId>
				<artifactId>archaius-core</artifactId>
				<version>0.7.4</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.ribbon</groupId>
				<artifactId>ribbon-loadbalancer</artifactId>
				<version>2.1.1</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.ribbon</groupId>
				<artifactId>ribbon-core</artifactId>
				<version>2.1.1</version>
			</dependency>

			<!-- 其他 依赖 -->
			<dependency>
				<groupId>com.github.scribejava</groupId>
				<artifactId>scribejava-apis</artifactId>
				<version>6.5.1</version>
			</dependency>
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20151123</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>application.yml</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.*</include>
				</includes>
				<excludes>
					<exclude>application.yml</exclude>
				</excludes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

    <profiles>
        <profile>
            <id>native</id>
            <properties>
                <active>native</active>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>k8s</id>
            <properties>
                <active>k8s</active>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <active>prod</active>
            </properties>
        </profile>
    </profiles>

</project>